# opencl-png-resizer

./: .gitmodules  CMakeLists.txt  README.md
src/: image.hpp  main.cpp  openclmanager.cpp  openclmanager.hpp  pngfile.cpp  pngfile.hpp  resizer.cpp  resizer.hpp
